[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Player/player_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Packed Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Dust Particle.png" type="Texture" id=3]
[ext_resource path="res://assets/SFX/jump.sfxr" type="AudioStream" id=4]
[ext_resource path="res://assets/SFX/walljump.sfxr" type="AudioStream" id=5]
[ext_resource path="res://assets/SFX/doublejump.sfxr" type="AudioStream" id=6]
[ext_resource path="res://assets/Live Bar.png" type="Texture" id=7]
[ext_resource path="res://assets/Big Heart Idle (18x14).png" type="Texture" id=8]
[ext_resource path="res://Packed Scenes/UIshowonstart.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 7.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 7.5

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.553073, 0.98324, 0.988827, 0.994413, 1 )
colors = PoolColorArray( 0.996094, 0.996094, 0.996094, 1, 0.822038, 0.822038, 0.822038, 1, 1, 1, 1, 0, 0.741136, 0.741136, 0.741136, 0.712871, 1, 1, 1, 0.549296, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.72067, 0.988827, 1 )
colors = PoolColorArray( 0, 0.937255, 1, 0.843137, 0, 0.937255, 1, 0, 0, 0.85098, 1, 0 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 18, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 36, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 54, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 72, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 90, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 108, 0, 18, 14 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 126, 0, 18, 14 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )
speed = 300
slide_gravity = 100
jump = 1100
double_jump = 500
friction = 0.2
acceleration = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 7.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.45
drag_margin_right = 0.3
drag_margin_bottom = 0.45
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 2

[node name="WallJump_Helper" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Jump_buffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="Particles" type="Node2D" parent="."]

[node name="RunParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2( 0, 12 )
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
lifetime_randomness = 0.4
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 8, 4 )
gravity = Vector2( 0, -20 )
angular_velocity = 0.1
angular_velocity_random = 0.35
tangential_accel = 0.3
color_ramp = SubResource( 3 )

[node name="ExplosionParticles" type="CPUParticles2D" parent="Particles"]
modulate = Color( 0, 6.86657, 8.67, 1 )
position = Vector2( 0, 19 )
emitting = false
amount = 100
local_coords = false
emission_shape = 1
emission_sphere_radius = 11.56
direction = Vector2( 0, 0 )
spread = 180.0
initial_velocity = 64.22
angular_velocity = 475.6
angular_velocity_random = 0.17
scale_amount = 3.0
color_ramp = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="sounds" type="Node2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 4 )

[node name="WalljumpSound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 5 )

[node name="DoublejumpSound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 9 )

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LifeBar" type="TextureRect" parent="UI/Control"]
margin_right = 66.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Heart1" type="AnimatedSprite" parent="UI/Control/LifeBar"]
position = Vector2( 19, 17 )
frames = SubResource( 13 )
frame = 3
playing = true

[node name="Heart2" type="AnimatedSprite" parent="UI/Control/LifeBar"]
position = Vector2( 31.5, 17 )
frames = SubResource( 13 )
frame = 3
playing = true

[node name="Heart3" type="AnimatedSprite" parent="UI/Control/LifeBar"]
position = Vector2( 44, 17 )
frames = SubResource( 13 )
frame = 3
playing = true
